--- a/ch5.3/index.css
+++ b/ch5.3/index.css
@@ -1,3 +1,4 @@
+/* 
 .chart div {
   font: 10px sans-serif;
   background-color: steelblue;
@@ -5,4 +6,23 @@
   padding: 3px;
   margin: 1px;
   color: white;
+} */
+
+
+
+.bar div {
+
+    margin: 3px;
+    background-color: aquamarine;
+    text-align: right;
+    padding: 3px;
+    height: 20px;
 }
+#dashboard {
+    
+    width:500px;
+    border:1px solid white;
+    
+    
+}
+
